add light adjusting radio buttons

--- a/405P3/vite-project/index.html
+++ b/405P3/vite-project/index.html
@@ -6,25 +6,21 @@
   <title>Arthur Baldwin CMSC 405 Project 3</title>
 </head>
 <body>
-
   <canvas id="glcanvas"></canvas>
   <div>
     <p class="bold">Project 3 controls</p>
     <label><input type="checkbox" id="rotateUFO">Rotate UFO</label>
     <br>
     <br>
-    <label>
-      Octahedron Size
-      <br>
-      <input type="range" min="1" max="3" value="1" class="slider" id="octaSlider">
-    </label>
+    <label>Octahedron Size</label><br>
+    <input type="range" min="1" max="3" value="1" class="slider" id="octaSlider">
     <br>
     <input type="radio" id="Op1" name="Options" value="Op1">
-    <label for="Op1">Option 1</label><br>
+    <label for="Op1">Grey Ambient Light</label><br>
     <input type="radio" id="Op2" name="Options" value="Op2">
-    <label for="Op2">Option 2</label><br>
+    <label for="Op2">Red Ambient Light</label><br>
     <input type="radio" id="Op3" name="Options" value="Op3">
-    <label for="Op3">Option 3</label>
+    <label for="Op3">Blue Ambient Light</label>
   </div>
   <script type="module" src="/main.js"></script>
 </body>
