--- a/405P3/vite-project/index.html
+++ b/405P3/vite-project/index.html
@@ -15,12 +15,12 @@
     <label>Octahedron Size</label><br>
     <input type="range" min="1" max="3" value="1" class="slider" id="octaSlider">
     <br>
-    <input type="radio" id="Op1" name="Options" value="Op1">
+    <input type="radio" id="Op1" name="Options" value="Op1" checked="checked">
     <label for="Op1">Grey Ambient Light</label><br>
     <input type="radio" id="Op2" name="Options" value="Op2">
     <label for="Op2">Red Ambient Light</label><br>
     <input type="radio" id="Op3" name="Options" value="Op3">
-    <label for="Op3">Blue Ambient Light</label>
+    <label for="Op3">RGB Spot Lights</label>
   </div>
   <script type="module" src="/main.js"></script>
 </body>
