--- a/405P3/vite-project/index.html
+++ b/405P3/vite-project/index.html
@@ -1,3 +1,10 @@
+ <!--
+  Arthur Baldwin CMSC 405 6381 Project 3 02/19/2023
+  This file contains the html elements used in the submission for
+  the third project. It consists of a canvas which contains the 
+  3d scene required by the project, and a div containing buttons
+  to manipulate elements of the scene.
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
